# NutriSec

./: .gitignore  README.md  gradle.properties
app/: build.gradle.kts
app/AxaluNew/: .gitignore  CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/: NutriSecActivity.kt  NutriSecApplication.kt  NutriSecNavGraph.kt  NutriSecNavigation.kt  NutriSecTheme.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/addeditday/: AddEditDayScreen.kt  AddEditDayViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/addedittask/: AddEditTaskScreen.kt  AddEditTaskViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/canIEatIt/: CanIEatItScreen.kt  CanIEatItViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/data/: Day.kt  DayDao.kt  DayRepository.kt  DefaultDayRepository.kt  DefaultTaskRepository.kt  NutriSecDatabase.kt  Task.kt  TaskDao.kt  TaskRepository.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/daydetail/: DayDetailScreen.kt  DayDetailViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/days/: DaysFilterType.kt  DaysScreen.kt  DaysViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/di/: CoroutinesModule.kt  DataModules.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/drawer/: DrawerScreen.kt  DrawerViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/statistics/: Curve.kt  StatisticsScreen.kt  StatisticsUtils.kt  StatisticsViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/taskdetail/: TaskDetailScreen.kt  TaskDetailViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/tasks/: TasksFilterType.kt  TasksScreen.kt  TasksViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/nutrisecapp/util/: Async.kt  ComposeUtils.kt  CoroutinesUtils.kt  NutriSecDrawer.kt  SettingsStore.kt  TopAppBars.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/: TodoNavGraph.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/addedittask/: AddEditTaskScreen.kt  AddEditTaskViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/data/: DefaultTaskRepository.kt  Task.kt  TaskDao.kt  TaskRepository.kt  ToDoDatabase.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/di/: DataModules.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/statistics/: StatisticsViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/taskdetail/: TaskDetailScreen.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/tasks/: TasksViewModel.kt
app/src/main/java/com/example/android/architecture/blueprints/todoapp/util/: TodoDrawer.kt
app/src/main/res/drawable/: list_completed_touch_feedback.xml  logo.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/: libs.versions.toml
shared-test/src/main/java/com/example/android/architecture/blueprints/todoapp/data/source/local/: FakeTaskDao.kt
shared-test/src/main/java/com/example/android/architecture/blueprints/todoapp/di/: DatabaseTestModule.kt
